--- a/app/boards/arm/nice60/nice60.dts
+++ b/app/boards/arm/nice60/nice60.dts
@@ -43,6 +43,7 @@ RC(4,0)   RC(4,1)   RC(4,2)                      RC(4,5)                       R
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
 
+/*
         diode-direction = "col2row";
         row-gpios
             = <&gpio1 14 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -68,6 +69,33 @@ RC(4,0)   RC(4,1)   RC(4,2)                      RC(4,5)                       R
             , <&gpio1 2  GPIO_ACTIVE_HIGH>
             ;
     };
+*/
+       diode-direction = "col2row";
+        row-gpios
+            = <&gpio0 09 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> 
+            , <&gpio0 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> 
+            , <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            ;
+        col-gpios
+            = <&gpio0 06 GPIO_ACTIVE_HIGH>
+            , <&gpio0 08 GPIO_ACTIVE_HIGH>
+            , <&gpio0 17 GPIO_ACTIVE_HIGH>
+            , <&gpio0 20 GPIO_ACTIVE_HIGH>
+            , <&gpio0 22 GPIO_ACTIVE_HIGH>
+            , <&gpio0 24 GPIO_ACTIVE_HIGH>
+            , <&gpio1 00 GPIO_ACTIVE_HIGH>
+            , <&gpio0 11 GPIO_ACTIVE_HIGH>
+            , <&gpio1 04 GPIO_ACTIVE_HIGH>
+            , <&gpio1 06 GPIO_ACTIVE_HIGH>
+            , <&gpio0 31 GPIO_ACTIVE_HIGH>
+            , <&gpio0 29 GPIO_ACTIVE_HIGH>
+            , <&gpio1 01 GPIO_ACTIVE_HIGH>
+            , <&gpio1 02 GPIO_ACTIVE_HIGH>
+            ;
+    };
+
 
     leds {
         compatible = "gpio-leds";
